package tribollojfx.model;

public enum Priorite {
    BASSE,
    NORMALE,
    HAUTE,
    URGENTE
}